# tree-sitter-kotlin

./: Cargo.toml  Makefile  README.md  go.mod  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
bindings/go/: binding.go  binding_test.go
bindings/rust/: build.rs  lib.rs
test/corpus/: declarations.txt  expressions.txt  semi.txt
